--- a/index.html
+++ b/index.html
@@ -34,56 +34,56 @@
 
             
             <section class="countries">
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/germany.png" width="264" height="160" alt="germany"></a>
                     <h3 class="name-country">Germany</h3>
                     <p><b>Population:</b> 81,770,900</p>
                     <p><b>Region:</b> Europe</p>
                     <p><b>Capital:</b> Berlin</p>
                 </div>
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/usa.png" width="264" height="160" alt="usa"></a>
                     <h3 class="name-country">United States of America</h3>
                     <p><b>Population:</b> 323,947,000</p>
                     <p><b>Region:</b> Americas</p>
                     <p><b>Capital:</b> Washington, D.C.</p>
                 </div>
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/brazil.png" width="264" height="160" alt="brazil"></a>
                     <h3 class="name-country">Brazil</h3>
                     <p><b>Population:</b> 206,135,893</p>
                     <p><b>Region:</b> Americas</p>
                     <p><b>Capital:</b> Brasília</p>
                 </div>
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/iceland.png" width="264" height="160" alt="iceland"></a>
                     <h3 class="name-country">Iceland</h3>
                     <p><b>Population:</b> 334,300</p>
                     <p><b>Region:</b> Europe</p>
                     <p><b>Capital:</b> Reykjavík</p>
                 </div>
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/afghanistan.png" width="264" height="160" alt="afghanistan"></a>
                     <h3 class="name-country">Afghanistan</h3>
                     <p><b>Population:</b> 27,657,145</p>
                     <p><b>Region:</b> Asia</p>
                     <p><b>Capital:</b> Kabul</p>
                 </div>
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/aland-islands.png" width="264" height="160" alt="aland_island"></a>
                     <h3 class="name-country">Aland Islands</h3>
                     <p><b>Population:</b> 28,875</p>
                     <p><b>Region:</b> Europe</p>
                     <p><b>Capital:</b> Mariehamn</p>
                 </div>
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/albania.png" width="264" height="160" alt="albania"></a>
                     <h3 class="name-country">Albania</h3>
                     <p><b>Population:</b> 2,886,026</p>
                     <p><b>Region:</b> Europe</p>
                     <p><b>Capital:</b> Tirana</p>
                 </div>
-                <div class="flags">
+                <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/algeria.png" width="264" height="160" alt="algeria"></a>
                     <h3 class="name-country">Algeria</h3>
                     <p><b>Population:</b> 40,400,000</p>
