--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 </head>
 <body>
     <header class="site-header">
+        <h1 class="visually-hidden">Wehere in the world?</h1>
         <div class="header-container container">
-            <a class="logo-link"><img class="logo" src="images/logo.svg" width="234" height="32"></a>
-            <button class="button"> Dark Mode</button>
+            <a class="logo-link"><img class="logo" src="images/logo.svg" alt="logo" width="234" height="32"></a>
+            <button class="button" type="button"> Dark Mode</button>
         </div>
     </header>
     <main>
         <div class="main-container container">
             <section class="section-form">
+                <h2 class="visually-hidden">look for the country you need</h2>
                 <form class="form">
-                    <input class="form-search" type="search" placeholder="Search for a country…">
+                    <label class="visually-hidden" for="search"> Write the state you are looking for</label>
+                        <input id="search" class="form-search" type="search" name="searched country" placeholder="Search for a country…" required>
                     <select name="category-filter" id="category">
                         <option value="all">Filter by Region</option>
                         <option value="africa">Africa</option>
@@ -36,59 +39,75 @@
             <section class="countries">
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/germany.png" width="264" height="160" alt="germany"></a>
-                    <h3 class="name-country">Germany</h3>
-                    <p><b>Population:</b> 81,770,900</p>
-                    <p><b>Region:</b> Europe</p>
-                    <p><b>Capital:</b> Berlin</p>
+                    <div class="info-country">
+                        <h3 class="name-country">Germany</h3>
+                        <p><b>Population:</b> 81,770,900</p>
+                        <p><b>Region:</b> Europe</p>
+                        <p><b>Capital:</b> Berlin</p>
+                  </div>
                 </div>
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/usa.png" width="264" height="160" alt="usa"></a>
-                    <h3 class="name-country">United States of America</h3>
-                    <p><b>Population:</b> 323,947,000</p>
-                    <p><b>Region:</b> Americas</p>
-                    <p><b>Capital:</b> Washington, D.C.</p>
+                    <div class="info-country">
+                        <h3 class="name-country">United States of America</h3>
+                        <p><b>Population:</b> 323,947,000</p>
+                        <p><b>Region:</b> Americas</p>
+                        <p><b>Capital:</b> Washington, D.C.</p>
+                  </div>
                 </div>
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/brazil.png" width="264" height="160" alt="brazil"></a>
-                    <h3 class="name-country">Brazil</h3>
-                    <p><b>Population:</b> 206,135,893</p>
-                    <p><b>Region:</b> Americas</p>
-                    <p><b>Capital:</b> Brasília</p>
+                    <div class="info-country">
+                        <h3 class="name-country">Brazil</h3>
+                        <p><b>Population:</b> 206,135,893</p>
+                        <p><b>Region:</b> Americas</p>
+                        <p><b>Capital:</b> Brasília</p>
+                  </div>
                 </div>
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/iceland.png" width="264" height="160" alt="iceland"></a>
-                    <h3 class="name-country">Iceland</h3>
-                    <p><b>Population:</b> 334,300</p>
-                    <p><b>Region:</b> Europe</p>
-                    <p><b>Capital:</b> Reykjavík</p>
+                    <div class="info-country">
+                        <h3 class="name-country">Iceland</h3>
+                        <p><b>Population:</b> 334,300</p>
+                        <p><b>Region:</b> Europe</p>
+                        <p><b>Capital:</b> Reykjavík</p>
+                  </div>
                 </div>
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/afghanistan.png" width="264" height="160" alt="afghanistan"></a>
-                    <h3 class="name-country">Afghanistan</h3>
-                    <p><b>Population:</b> 27,657,145</p>
-                    <p><b>Region:</b> Asia</p>
-                    <p><b>Capital:</b> Kabul</p>
+                    <div class="info-country">
+                        <h3 class="name-country">Afghanistan</h3>
+                        <p><b>Population:</b> 27,657,145</p>
+                        <p><b>Region:</b> Asia</p>
+                        <p><b>Capital:</b> Kabul</p>
+                  </div>
                 </div>
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/aland-islands.png" width="264" height="160" alt="aland_island"></a>
-                    <h3 class="name-country">Aland Islands</h3>
-                    <p><b>Population:</b> 28,875</p>
-                    <p><b>Region:</b> Europe</p>
-                    <p><b>Capital:</b> Mariehamn</p>
+                    <div class="info-country">
+                        <h3 class="name-country">Aland Islands</h3>
+                        <p><b>Population:</b> 28,875</p>
+                        <p><b>Region:</b> Europe</p>
+                        <p><b>Capital:</b> Mariehamn</p>
+                  </div>
                 </div>
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/albania.png" width="264" height="160" alt="albania"></a>
-                    <h3 class="name-country">Albania</h3>
-                    <p><b>Population:</b> 2,886,026</p>
-                    <p><b>Region:</b> Europe</p>
-                    <p><b>Capital:</b> Tirana</p>
+                    <div class="info-country">
+                        <h3 class="name-country">Albania</h3>
+                        <p><b>Population:</b> 2,886,026</p>
+                        <p><b>Region:</b> Europe</p>
+                        <p><b>Capital:</b> Tirana</p>
+                  </div>
                 </div>
                 <div class="flag">
                     <a class="link" href="#"><img class="link-img" src="images/algeria.png" width="264" height="160" alt="algeria"></a>
-                    <h3 class="name-country">Algeria</h3>
-                    <p><b>Population:</b> 40,400,000</p>
-                    <p><b>Region:</b> Africa</p>
-                    <p><b>Capital:</b> Algiers</p>
+                    <div class="info-country">
+                        <h3 class="name-country">Algeria</h3>
+                        <p><b>Population:</b> 40,400,000</p>
+                        <p><b>Region:</b> Africa</p>
+                        <p><b>Capital:</b> Algiers</p>
+                  </div>
                 </div>
             </section>
         </div>
